# sparse-merkle-tree

./: README.md  index.js  package.json
js/: index.js  package.json
rust/: Cargo.toml
rust/src/: lib.rs
solidity/: SparseMerkleMultiProof.sol
