[package]
name = "smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", optional = true, default-features = false }
log = { version = "0.4", optional = true, default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
hex-literal = "0.3"

[features]
debug = ["hex", "hex/std", "log"]
default = ["std", "debug", "keccak"]
keccak = ["tiny-keccak"]
std = []
